--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,33 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+*,html {
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+
+html {
+display:block;
+width:100%;
+height:100%;
+min-width:320px;
+font-size:62.5%;
+scroll-behavior:smooth;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+color:inherit;
+text-decoration:none;
 }
 
-* {
-  box-sizing: border-box;
+figure,h1,p,ul {
+  -webkit-margin-before:0;
+  margin-block-start:0;
+  -webkit-margin-after:0;
+  margin-block-end:0;
+  -webkit-margin-start:0;
+  margin-inline-start:0;
+  -webkit-margin-end:0;
+  margin-inline-end:0;
+  -webkit-padding-start:0;
+  padding-inline-start:0;
 }
+
